# BO-ORC-case-study

./: README.md  main.tex  pyproject.toml  requirements.txt
bench/cost002/: summary.csv
bench/cost005/: summary.csv
bench/cost01/: summary.csv
bench/cost01_inverse/: summary.csv
bench/cost01_leaky_onestage_mixture/seed_000/: scbo_results.csv  summary.txt
bench/cost01_leaky_onestage_mixture/seed_001/: scbo_results.csv  summary.txt
bench/cost01_leaky_onestage_mixture/seed_002/: scbo_results.csv  summary.txt
bench/cost01_vprior/: summary.csv
bench/cov08/: summary.csv
bench/cov40/: summary.csv
bench/full/: summary.csv
bench/full2/: summary.csv
bench/full3/: summary.csv
bench/relax01/: summary.csv
bench/relax01_vprior/: summary.csv
benchmarks/: __init__.py  aggregate_results.py  run_benchmark.py
docs/: DATA_CATALOG.md  results_draft.md
measlab/seed_000/: scbo_results.csv  sequence.csv  summary.txt
mixtures/: mixture_tutorial.ipynb  mixture_viz.py
orc_bo/: __init__.py  cli.py  config.py  constraints.py  geometry.py  logging_setup.py  orc_model.py  scbo.py  seeding.py  targeting.py  thermo.py
orc_bo/data/: Joback_Refrigerants.csv
orc_bo/pipelines/: __init__.py  common.py  onestage.py  twostage.py
runs/smoke/: summary.csv
tests/: conftest.py  test_constraints.py  test_geometry.py  test_orc_model.py  test_targeting.py  test_thermo.py
tests/golden/: golden_values.json
viz/: README.md  convergence.py  cost_curve.py  coverage_ablation.py  feasibility.py  make_all.py  performance.py  property_space.py  ratio_sweep.py  style.py
(+1642 files in other folders)
